# abr

./: .gitignore  .hgignore  ABR-52-3  ABR-52-3-analyzed.txt  LICENSE.txt  MANIFEST.in  README.md  README.rst  abrpanel.py  analyze.py  build-easy.py  build.py  config.py  control.py  datafile.py  datatype.py  filter_EPL_LabVIEW_ABRIO_File.py  filter_HDF5_file.py  filter_NCRAR_file.py  filter_database.py  frame.py  interactor.py  notebook.py  packaging.md  peakdetect.py  presenter.py  pyproject.toml  setup.py  signal.py  walker.py
.github/workflows/: publish-to-pypi.yml
abr/: __init__.py  abrpanel.py  app.py  compare.py  compare_window.enaml  control.py  datatype.py  frame.py  interactor.py  launch_window.enaml  main.py  main_window.enaml  matplotlibrc  peakdetect.py  presenter.py  util.py
abr/app/: __init__.py  cmd_compare.py  cmd_launcher.py  cmd_main.py  cmd_main_loop.py
abr/data/: CAP-139-5-16.0kHz-analyzed.txt
abr/parsers/: BCOLZ.py  EPL.py  HDF5.py  NCRAR.py  PSI.py  __init__.py  dataset.py  psi_bcolz.py
data/: CAP-139-5
help/: Table of Contents.hhc  algorithm.htm  help.chm  help.hhp  keybindings.htm  overview.htm
packaging/: bld.bat  menu-windows.json  meta.yaml
parsers/: EPL.py  HDF5.py  NCRAR.py  __init__.py
scripts/: make_icon.py
